# Harmonic-Universe

./: .dockerignore  .env  .env.docker  .env.example  .env.postgres  .env.render  .eslintrc.json  .flaskenv  .gitignore  .gitignore_new  .preinstallrc  API.md  CODEBASE_CLEANUP_README.md  CONTRIBUTING.md  DATABASE_RESTORATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  Dashboard-BFAei3Aq 3.js  Dashboard-mIvWeqvP 3.js  Dockerfile  FRESH_STRUCTURE.md  FRONTEND_AUTH_AND_CRUD_FLOW.md  Home-BrEEk1Rb 3.js  Home-DF_5hRc9.js  IMPLEMENTATION_STATUS.md  Layout-DPRLhXPK.js  Layout-Dl7304QE.js  Layout-qWbQfBiy.js  Layout-qZKQrUJ3 3.js  MIGRATION_FIX.md  MODAL_CONVERSION_SUMMARY.md  PNPM_MIGRATION.md  Pipfile  Procfile  QUICK_REFERENCE.md  README.md  README_DEPLOY.md  README_DEPLOYMENT.md  README_NEW.md  (+250 more)
backend/: .coverage  .coverage 2  .coverage 3  .dockerignore  .env  .env 2  .env-backend  .env.development  .env.example  .env.test  .flake8  .flaskenv  .gitignore  Dockerfile  Dockerfile.prod  README 2.md  README.md  TEST_STATUS.md  __init__.py  alembic.ini  app 2.py  app.py  check_demo.py  check_params.py  check_tables.py  cleanup_list.txt  cleanup_old_demo_users.py  config.py  coverage.xml  create_db.py  create_demo.py  create_demo_user.py  create_tables.py  dev.db  diagnose.README 2.md  diagnose.py  docker-compose.yml  docker-entrypoint.sh  fix_auth.py  init.sh  (+50 more)
backend/alembic/: env.py
backend/alembic_backup/: env.py
backend/api/: __init__.py  models.py
backend/app/: __init__.new  __init__.py  auth.py  celery.py  cli.py  config.py  database.py  db.py  exceptions.py  extensions.py  main.py  models.py  schemas.py  test_config.py  websocket.py  websockets.py
backend/backend/: test_report_20250128_110623.txt
backend/backup-cleanup/: .env.postgres  render-start.sh
backend/backups/: app.db.backup
backend/config/: __init__.py
backend/docs/: API.md  README.md
backend/fixes/: README.md  direct-fix.js  htaccess  mime_override.py  mimetype.ini  react-fix-loader.js  special_loader.js  update-index.js
backend/harmonic_universe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/harmonic_universe_backend.egg-info/: PKG-INFO  PKG-INFO 2  SOURCES 2.txt  SOURCES.txt  requires.txt
backend/instance/: app.db  harmonic_universe.db  test.db
backend/migrations/: env.py
backend/models/: __init__.py  associations.py  characters.py  enums.py  keyframe.py  locations.py  notes.py  timeline.py  token_blocklist.py  universe.py  universes.py  user.py  users.py
backend/public/: index.html
backend/reports/: analysis.py  core_auth_tests.html  test_analysis_report.json  test_report.html  test_results_20250201_084759.json  test_results_20250201_085011.json  test_results_20250201_085314.json  test_results_20250201_085348.json  test_results_20250201_085651.json  test_results_20250201_085802.json  test_results_20250201_085955.json  test_results_20250201_090151.json  test_results_20250201_090628.json  test_results_20250201_091036.json  test_results_20250201_092003.json  test_results_20250206_090125.json  test_results_20250206_090229.json  test_results_20250206_090313.json  test_results_20250206_090419.json  test_results_20250206_090534.json  test_results_20250206_090609.json  test_results_20250206_090803.json  test_results_20250206_090948.json  test_results_20250206_091357.json  test_results_20250206_094504.json  test_results_20250206_105810.json  test_results_20250206_113745.json
backend/routers/: ai_models.py
backend/routes/: __init__.py  auth.py  auth_routes.py  character.py  location.py  media_effect_routes.py  note.py  preferences_routes.py  universe.py  (+3 more)
(+5685 files in other folders)
