[tool.poetry]
name = "harmonic-universe-backend"
version = "0.1.0"
description = "Backend for the Harmonic Universe application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
Flask-SQLAlchemy = "3.1.1"
SQLAlchemy = "2.0.23"
Flask-Migrate = "4.0.5"
Flask-Cors = "4.0.0"
Flask-JWT-Extended = "4.6.0"
Flask-Bcrypt = "1.0.1"
Flask-Login = "0.6.3"
Flask-SocketIO = "5.3.6"
python-dotenv = "1.0.0"
alembic = "1.12.1"
gunicorn = "21.2.0"
Werkzeug = "2.3.7"
Flask-Caching = "2.1.0"
psycopg2-binary = "2.9.9"
redis = "5.0.1"
bcrypt = "4.0.1"
PyJWT = "2.8.0"
passlib = "1.7.4"
cryptography = "41.0.7"
Flask-Talisman = "1.1.0"
Flask-Limiter = "3.5.0"
limits = "3.7.0"
python-magic = "0.4.27"
python-dateutil = "2.8.2"
email-validator = "2.1.0"
requests = "2.31.0"
structlog = "24.1.0"
psutil = "5.9.8"
librosa = "0.10.1"
soundfile = "0.12.1"
numpy = "1.24.3"
scipy = "1.11.2"
pandas = "2.1.0"
matplotlib = "3.8.0"
pydub = "0.25.1"
eventlet = "0.33.3"
whitenoise = "6.6.0"
sentry-sdk = "1.39.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-cov = "5.0.0"
coverage = "7.4.0"
faker = "22.6.0"
black = "23.12.1"
flake8 = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
''' 